# ProxSyncBox

./: .editorconfig  .env.example  .gitignore  .infisical-baseline.json  .infisical-scan.toml  .markdownlint.json  .mise.toml  .pre-commit-config.yaml  .prettierrc  .prettierrc.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  README.md  SECURITY.md  config_loader.py  config_manager.py  config_models.py  gui_app.py  netbox_handler.py  package.json  proxmox_handler.py  pyproject.toml  requirements.txt  settings_dialog.py  sync_orchestrator.py  utils.py
.claude/agents/: '(ᗒᗣᗕ)՞ meta-agent.md  (͡• ͜໒ ͡• ) documentation-specialist.md  ansible-linter.md  hcl-linter.md  lint-master.md  markdown-linter.md  python-linter.md  shell-linter.md  ┌༼◉ل͟◉༽┐project-orchestrator.md  ┗(▀̿Ĺ̯▀̿ ̿)┓commit-craft.md
.claude/commands/: markdown-lint.md  pr-context.md  prime.md  slash-generator.md  slash-meta.md
.github/workflows/: autofix.yml  ci.yml
assets/: Custom Fields.csv
dev_utils/: README.md
docs/: DEVELOPMENT_PRIORITIES.md  MODERN_DEV_SETUP.md  QOL_IMPROVEMENTS.md  README.md  RESTRUCTURE_PLAN.md  ROADMAP.md  TESTING_SETUP.md
testing/: README.md
