[project]
name = "proxsyncbox"
version = "1.0.0"
description = "GUI application for synchronizing Proxmox VE infrastructure with NetBox"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ProxSyncBox Contributors"},
]
keywords = ["proxmox", "netbox", "synchronization", "virtualization", "dcim"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "PyQt6>=6.0.0",
    "proxmoxer>=2.0.0",
    "pynetbox>=7.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.25.0",
    "paramiko>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.2.0",
    "types-requests",
    "types-paramiko",
    "pre-commit>=3.5.0",
]

[project.scripts]
proxsyncbox = "gui_app:main"

[project.urls]
Repository = "https://github.com/yourusername/ProxSyncBox"
Issues = "https://github.com/yourusername/ProxSyncBox/issues"
Documentation = "https://github.com/yourusername/ProxSyncBox/tree/main/docs"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["proxsyncbox"]

# Ruff configuration
[tool.ruff]
target-version = "py38"
line-length = 120
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
known-first-party = ["proxsyncbox"]

[tool.ruff.per-file-ignores]
"testing/**/*.py" = ["ARG001", "ARG002"]  # Allow unused arguments in tests
"dev_utils/**/*.py" = ["T201"]  # Allow print statements in dev utilities

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start permissive, gradually enable
ignore_missing_imports = true
show_error_codes = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "proxmoxer.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pynetbox.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PyQt6.*"
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=proxsyncbox",
    "--cov-report=term-missing",
    "--cov-report=html",
]

# Coverage configuration
[tool.coverage.run]
source = ["proxsyncbox"]
omit = [
    "*/tests/*",
    "*/testing/*",
    "*/dev_utils/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]